// protoc -I proto/ proto/plugin.proto --go-grpc_out=proto/ --go_out=proto/ --proto_path=$GOPATH/bin

syntax = "proto3";
package proto;
option go_package = "./proto";

message RequestArgs
{
  uint32 plugin_id = 1;
  string request  = 2;
  string request_id = 3;
}

message ResponseResult
{
  string data     = 1;
  string request_id = 2;
}

service Driver
{
  rpc GetDriverInfo( RequestArgs ) returns ( ResponseResult );
  rpc SetConfig( RequestArgs ) returns ( ResponseResult );

  rpc Setup( RequestArgs ) returns ( ResponseResult );
  rpc Start( RequestArgs ) returns ( ResponseResult );
  rpc Restart( RequestArgs ) returns ( ResponseResult );
  rpc Stop( RequestArgs ) returns ( ResponseResult );

  rpc Get ( RequestArgs ) returns ( ResponseResult );
  rpc Set ( RequestArgs ) returns ( ResponseResult );
}

service Report
{
  rpc Post ( RequestArgs ) returns ( ResponseResult );
  rpc State ( RequestArgs ) returns ( ResponseResult );
}